Make table headings unselectable to avoid highlighting when pressed on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -99,3 +99,11 @@ a {
     background-position: 0% 50%, 50% 50%, 100% 100%;
   }
 }
+
+.unselectable {
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
